--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 Development in Progress.
+
+Basic Side Scroller game based off flash game "Flight" from armor games.
+
+Tests the use of Ant, flex library, and basic creation of flash games.
